# KAIC

./: .gitignore  migrate_theme.js  soften_theme.js  soften_theme_more.js
backend/: pyproject.toml
backend/app/: main.py
backend/app/agent/: background_worker.py  concierge_node.py  dependencies.py  graph.py  logistics_node.py  mcp_test.py  prompts.py  read_node.py  shopper_node.py  tools.py
backend/app/schemas/: apiSchemas.py  graphSchemas.py  requestSchemas.py  shopperSchemas.py
backend/docs/: episodic_memory.sql
frontend/: package-lock.json  package.json  test.js
frontend/app/: globals.css  page.tsx  test.tsx
frontend/app/api/chat/: route.ts
frontend/app/components/: CartSidebar.tsx  CategoryGrid.tsx  CheckDelivery.tsx  CheckoutForm.tsx  CreateOrder.tsx  DeliveryCitiesList.tsx  DynamicRenderer.tsx  ProductCard.tsx  ProductDetail.tsx  ProductList.tsx  TrackOrder.tsx
