[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.105.2",
    "fastapi>=0.136.3",
    "fastmcp>=3.4.0",
    "httpx>=0.28.1",
    "langchain>=1.3.4",
    "langchain-core>=1.4.0",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.4",
    "mcp>=1.27.2",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
]
